--- a/20260217.ipynb
+++ b/20260217.ipynb
@@ -34,7 +34,7 @@
         "id": "F1PRiElRYTzX",
         "outputId": "348e7a17-9cc1-46b8-fb67-ae865f02c2d9"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -72,7 +72,7 @@
         "id": "HDjwg4MBc5bO",
         "outputId": "59265991-4bbe-4608-d662-5d8a0db2792b"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -80,6 +80,193 @@
           "text": [
             "3\n",
             "6\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#25304\n",
+        "x=int(input())\n",
+        "n=int(input())\n",
+        "sum=0\n",
+        "for i in range(n):\n",
+        "  a,b=map(int,input().split())\n",
+        "  sum+=a*b\n",
+        "if sum==x:\n",
+        "  print('Yes')\n",
+        "else:\n",
+        "  print('No')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "MKt6uBr3gj-y",
+        "outputId": "48a3ed5c-07fc-49ad-8651-9065ac74a8f0"
+      },
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "260000\n",
+            "4\n",
+            "20000 5\n",
+            "30000 2\n",
+            "10000 6\n",
+            "5000 8\n",
+            "Yes\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#25314\n",
+        "n=int(input())\n",
+        "print('long '*(n//4)+'int')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lUfgMl4phtyv",
+        "outputId": "f6f98998-cc13-41ac-b721-c76ea70bbf4a"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "20\n",
+            "long long long long long int\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#15552\n",
+        "n=int(input())\n",
+        "result=[]\n",
+        "for i in range(n):\n",
+        "  a,b=map(int,input().split())\n",
+        "  result.append(a+b)\n",
+        "for i in range(n):\n",
+        "  print(result[i])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0F5dS3yeh_Uf",
+        "outputId": "ce89d7aa-efe8-490c-c5d1-5b3d2e2c0c96"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "1 1\n",
+            "12 34\n",
+            "5 500\n",
+            "40 60\n",
+            "1000 1000\n",
+            "2\n",
+            "46\n",
+            "505\n",
+            "100\n",
+            "2000\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#11021\n",
+        "n=int(input())\n",
+        "result=[]\n",
+        "for i in range(n):\n",
+        "  a,b=map(int,input().split())\n",
+        "  result.append(a+b)\n",
+        "for i in range(n):\n",
+        "  print('Case #'+str(i+1)+': '+str(result[i]))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-mxJI2MQisD6",
+        "outputId": "dce4273c-56d4-4e9e-8fca-f5e74092e6db"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "1 1\n",
+            "2 3\n",
+            "3 4\n",
+            "9 8\n",
+            "5 2\n",
+            "Case #0: 2\n",
+            "Case #1: 5\n",
+            "Case #2: 7\n",
+            "Case #3: 17\n",
+            "Case #4: 7\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#11022\n",
+        "n=int(input())\n",
+        "A=[]\n",
+        "B=[]\n",
+        "for i in range(n):\n",
+        "  a,b=map(int,input().split())\n",
+        "  A.append(a)\n",
+        "  B.append(b)\n",
+        "for i in range(n):\n",
+        "  print('Case #',i+1,': ',A[i],' + ',B[i],' = ',A[i]+B[i],sep='')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "jZm6-NKUjhWO",
+        "outputId": "65a8c887-234b-4815-b424-f88459f92685"
+      },
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "1 1\n",
+            "2 3\n",
+            "3 4\n",
+            "9 8\n",
+            "5 2\n",
+            "Case #1: 1 + 1 = 2\n",
+            "Case #2: 2 + 3 = 5\n",
+            "Case #3: 3 + 4 = 7\n",
+            "Case #4: 9 + 8 = 17\n",
+            "Case #5: 5 + 2 = 7\n"
           ]
         }
       ]
